--- a/app/elements/keygen-app/keygen-app.css
+++ b/app/elements/keygen-app/keygen-app.css
@@ -1,4 +1,15 @@
 :host {
   display: block; }
 
+paper-shadow.container {
+  padding: 50px 10px;
+  margin: 50px 10px; }
+
+@media screen and (min-width: 768px) {
+  paper-shadow.container {
+    width: 750px; } }
+@media screen and (max-width: 768px) {
+  paper-shadow.container {
+    width: 90%; } }
+
 /*# sourceMappingURL=keygen-app.css.map */
