--- a/app/elements/keygen-app/keygen-app.scss
+++ b/app/elements/keygen-app/keygen-app.scss
@@ -1,3 +1,20 @@
 :host {
   display: block;
 }
+
+paper-shadow.container {
+  padding: 50px 10px;
+  margin: 50px 10px;
+}
+
+@media screen and (min-width: 768px) {
+  paper-shadow.container {
+    width: 750px;
+  }
+}
+
+@media screen and (max-width: 768px){
+  paper-shadow.container {
+    width: 90%;
+  }
+}
